<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/light_blue">



    <!-- Player turn -->
    <LinearLayout
        android:id="@+id/playerRowLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/player1_color_purple">

        <TextView
            android:id="@+id/player_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player1_turn"
            android:textSize="30sp"
            android:textColor="@color/black"/>
    </LinearLayout>


    <!-- Rolling dice picture -->
    <ImageView
        android:id="@+id/dice_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/dice1"
        android:contentDescription="@null" />

    <!-- Button to roll dice -->
    <Button
        android:id="@+id/roll_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/roll_Dice"
        android:textColor="@color/black"/>



    <!-- The player totals -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/player1_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player1_default_score"
            android:textSize="30sp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/player2_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player2_default_score"
            android:textSize="30sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/question_color">

        <TextView
            android:id="@+id/question_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/pre_Question"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

    </LinearLayout>


    <!-- User Input -->
    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:inputType="numberSigned"
        android:contentDescription="@string/string_button_text"/>


    <!-- Button to submit answer -->
    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit_button_text"
        android:textColor="@color/black"/>

    <!-- Jackpot Amount -->
    <TextView
        android:id="@+id/jackpot_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/jackpot_text"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/jackpot_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="5 points"
        android:textSize="30sp"
        android:textColor="@color/black"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/jackpot_question_color">

            <TextView
                android:id="@+id/jackpot_question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/pre_jackpotQuestion"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                />

    </LinearLayout>
</LinearLayout>